apps/officina/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: officina
  labels:
    app.kubernetes.io/name: officina
spec:
  selector:
    app: officina
  ports:
    - name: health
      port: 8080
      targetPort: health
      protocol: TCP
    - name: cockpit
      port: 8081
      targetPort: cockpit
      protocol: TCP
    - name: presence
      port: 8082
      targetPort: presence
      protocol: TCP
