apps/officina/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: officina-egress
spec:
  endpointSelector:
    matchLabels:
      app: officina
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nats
            app.kubernetes.io/name: nats
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP

    - toFQDNs:
        - matchName: github.com
        - matchName: api.github.com
        - matchName: api.telegram.org
        - matchName: api.moonshot.ai
        - matchName: api.kimi.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: officina-ingress
spec:
  endpointSelector:
    matchLabels:
      app: officina
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8081"
              protocol: TCP
